--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,18 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home"
+            android:title="@string/menu_home" />
+        <item
             android:id="@+id/nav_perfil"
             android:icon="@drawable/ic_icons8_configuracoes_3_50_2"
             android:title="@string/menu_settings" />
+
+        <item
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_search"
+            android:title="@string/menu_search" />
         <item
             android:id="@+id/nav_playlist"
             android:checkable="false"
