--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -45,4 +45,9 @@
         android:name="com.example.pb_android_radion.fragment.PerfilFragment"
         android:label="Perfil"
         tools:layout="@layout/fragment_perfil" />
+    <fragment
+        android:id="@+id/nav_search"
+        android:name="com.example.pb_android_radion.SearchFragment"
+        android:label="Pesquisa de Músicas"
+        tools:layout="@layout/fragment_search" />
 </navigation>
