--- a/app/src/main/res/layout/lista_musica.xml
+++ b/app/src/main/res/layout/lista_musica.xml
@@ -19,7 +19,7 @@
 
         <ImageView
             android:id="@+id/imagemMusica"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
@@ -37,7 +37,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/imagemMusica"
             android:text="Line 1"
-            android:textColor="@android:color/black"
+            android:textColor="@color/fundoLogin"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -47,8 +47,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtNomeMusica"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_toRightOf="@+id/imagemMusica"
             android:text="Line 2"
+            android:textColor="@color/fundoLogin"
             android:textSize="15sp" />
 
     </RelativeLayout>
@@ -58,7 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="56dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="61dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
