--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,9 @@
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="437dp"
-        android:layout_height="719dp"
+        android:layout_width="409dp"
+        android:layout_height="599dp"
+        android:layout_marginBottom="32dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -20,5 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022"
         app:navGraph="@navigation/mobile_navigation" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
