--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -43,7 +43,9 @@
             android:id="@+id/playBtn"
             android:layout_width="35dp"
             android:layout_height="42dp"
-            android:background="@drawable/ic_play_arrow_black_24dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/iconeplay"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +67,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="10dp"
+            android:visibility="gone"
             android:src="@drawable/voltarmusica"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/playBtn"
@@ -79,87 +82,13 @@
             android:layout_marginLeft="50dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/avancarmusica"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/playBtn" />
 
-        <!-- <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="700dp"
-            android:layout_height="897dp"
-            android:src="@drawable/fundo_foto"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="-145dp" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="288dp"
-            android:layout_height="273dp"
-            android:layout_marginTop="70dp"
-            android:src="@drawable/foto_musica"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/barra_musica"
-            app:layout_constraintBottom_toTopOf="@+id/imageView5"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="0.863" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="27dp"
-            android:layout_height="44dp"
-            android:src="@drawable/voltar_musica"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView5"
-            app:layout_constraintHorizontal_bias="0.697"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="0.636" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="27dp"
-            android:layout_height="44dp"
-            android:src="@drawable/avancar_musica"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.243"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="0.636" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/play"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="0.648" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="41dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/abc_vector_test"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" /> -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
