Correção do erro no singIn, no cadastro (Firebase) e a inserção no auth

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -79,7 +79,7 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginLeft="32dp"
                         android:layout_marginTop="16dp"
-                        android:src="@drawable/ic_face_24px"
+                        android:src="@drawable/ic_person_black_24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -123,14 +123,14 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginLeft="32dp"
                         android:layout_marginTop="16dp"
-                        android:src="@drawable/ic_face_24px"
+                        android:src="@drawable/ic_person_black_24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0" />
 
                     <TextView
-                        android:id="@+id/textViewApelido"
+                        android:id="@+id/textViewEstado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -150,8 +150,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/textViewApelido"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewApelido"
+                        app:layout_constraintStart_toStartOf="@+id/textViewEstado"
+                        app:layout_constraintTop_toBottomOf="@+id/textViewEstado"
                         app:layout_constraintVertical_bias="0.0" />
 
                     <ImageView
