--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,6 +47,6 @@
     <fragment
         android:id="@+id/nav_search"
         android:name="com.example.pb_android_radion.fragment.SearchFragment"
-        android:label="fragment_search"
+        android:label="Pesquisa de Músicas"
         tools:layout="@layout/fragment_search" />
 </navigation>
