--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".fragment.SearchFragment">
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,7 +20,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/ListaDeMusicasRecycle"
+                android:id="@+id/searchRecycle"
                 android:layout_width="394dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
