--- a/app/src/main/res/navigation/nav_host_principal.xml
+++ b/app/src/main/res/navigation/nav_host_principal.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_host_principal"
-    app:startDestination="@id/searchFragment">
+    app:startDestination="@id/nav_search">
     <fragment
-        android:id="@+id/searchFragment"
-        android:name="com.example.pb_android_radion.fragment.SearchFragment"
+        android:id="@+id/nav_search"
+        android:name="com.projeto.pb_android_radion.fragment.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 </navigation>
