--- a/app/src/main/res/navigation/nav_login.xml
+++ b/app/src/main/res/navigation/nav_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.pb_android_radion.fragment.LoginFragment"
+        android:name="com.projeto.pb_android_radion.fragment.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/LoginToCadastrar"
-        android:name="com.example.pb_android_radion.fragment.CadastroFragment"
+        android:name="com.projeto.pb_android_radion.fragment.CadastroFragment"
         android:label="layout_cadastro"
         tools:layout="@layout/layout_cadastro" >
         <action
