--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    <color name="colorPrimary">#673161</color>-->
-    <color name="colorPrimary">#341931</color>
+    <color name="colorPrimary">#673161</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <!--<color name="colorAccent">#03DAC5</color>-->
-    <color name="colorAccent">#DA2976</color>
+    <color name="colorAccent">#03DAC5</color>
     <color name="boxText">#FFFFFF</color>
     <color name="textos">#D3D3D3</color>
     <color name="branco">#FFFFFF</color>
