--- a/app/src/main/res/layout/lista_musica.xml
+++ b/app/src/main/res/layout/lista_musica.xml
@@ -19,7 +19,7 @@
 
         <ImageView
             android:id="@+id/imagemMusica"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
@@ -27,6 +27,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
+            android:background="#D53030"
             android:padding="2dp" />
 
         <TextView
