--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_search"
-            android:visible="false"
+            android:visible="true"
             android:title="@string/menu_search" />
         <item
             android:id="@+id/nav_playlist"
