--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,11 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.projeto.pb_android_radion.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home">
-        <action
-            android:id="@+id/action_nav_home_to_nav_search"
-            app:destination="@id/nav_search" />
-    </fragment>
+        tools:layout="@layout/fragment_home"/>
     <!-- <fragment
         android:id="@+id/nav_home_second"
         android:name="com.example.pb_android_radion.ui.home.HomeSecondFragment"
