--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <TextView
-        android:id="@+id/tvEmpty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:gravity="center"
-        android:text="Sem resultado."
-        android:visibility="gone" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvEmpty"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_below="@id/toolbar"-->
+<!--        android:gravity="center"-->
+<!--        android:text="Sem resultado."-->
+<!--        android:visibility="gone" />-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -26,43 +26,43 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <ImageView
-                android:id="@+id/searchImg"
-                android:layout_width="87dp"
-                android:layout_height="37dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginEnd="8dp"
-                android:clickable="true"
-                android:layout_marginRight="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/editTextPesquisa"
-                app:srcCompat="@android:drawable/ic_menu_search"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="0dp" />
+<!--            <ImageView-->
+<!--                android:id="@+id/searchImg"-->
+<!--                android:layout_width="87dp"-->
+<!--                android:layout_height="37dp"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:layout_marginEnd="8dp"-->
+<!--                android:clickable="true"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="1.0"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/editTextPesquisa"-->
+<!--                app:srcCompat="@android:drawable/ic_menu_search"-->
+<!--                tools:ignore="MissingConstraints"-->
+<!--                tools:layout_editor_absoluteY="0dp" />-->
 
-            <EditText
-                android:id="@+id/editTextPesquisa"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:clickable="false"
-                android:ems="10"
-                android:hint="@string/pesquisa_por_m_sica"
-                android:inputType="textPersonName"
-                android:onClick="pesquisaMusica"
-                app:layout_constraintEnd_toStartOf="@+id/searchImg"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+<!--&lt;!&ndash;            <EditText&ndash;&gt;-->
+<!--&lt;!&ndash;                android:id="@+id/editTextPesquisa"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_width="0dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_marginStart="16dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_marginLeft="16dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_marginEnd="16dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_marginRight="16dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:clickable="false"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:ems="10"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:hint="@string/pesquisa_por_m_sica"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:inputType="textPersonName"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:onClick="pesquisaMusica"&ndash;&gt;-->
+<!--&lt;!&ndash;                app:layout_constraintEnd_toStartOf="@+id/searchImg"&ndash;&gt;-->
+<!--&lt;!&ndash;                app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     </com.google.android.material.appbar.AppBarLayout>
 
