--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -41,8 +41,9 @@
 
         <Button
             android:id="@+id/playBtn"
-            android:layout_width="35dp"
-            android:layout_height="42dp"
+            android:layout_width="33dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/iconeplay"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,6 +56,7 @@
             android:id="@+id/positionBar"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
