--- a/app/src/main/res/layout/lista_musica.xml
+++ b/app/src/main/res/layout/lista_musica.xml
@@ -19,15 +19,15 @@
 
         <ImageView
             android:id="@+id/imagemMusica"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:src="@drawable/botao_play_home"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
-            android:background="#D53030"
+            android:layout_marginTop="5dp"
             android:padding="2dp" />
 
         <TextView
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtNomeMusica"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/imagemMusica"
             android:text="Line 2"
             android:textColor="@color/fundoLogin"
